Fix #134 meow meow